[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qailo"
description = "Simplest Quantum Circuit Simulator"
readme = "README.md"
authors = [
    { name = "Synge Todo", email = "wistaria@phys.s.u-tokyo.ac.jp" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = ["matplotlib", "numpy"]

[tool.setuptools.dynamic]
version = { attr = "qailo._version.version" }

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools_scm]
write_to = "qailo/_version.py"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.py$'
