[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qailo"
description = "Simplest Quantum Circuit Simulator"
readme = "README.md"
authors = [{ name = "Synge Todo", email = "wistaria@phys.s.u-tokyo.ac.jp" }]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]
dependencies = ["matplotlib", "numpy", "typing-extensions"]

[tool.setuptools.dynamic]
version = { attr = "qailo._version.version" }

[tool.setuptools_scm]
write_to = "src/qailo/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"qailo" = ["py.typed"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.black]
target-version = ["py38"]
include = '\.py$'

[tool.ruff]
target-version = "py38"
select = ["E", "F", "I"]
